force-app/zurich-base/main/default/objects/Global_Configuration__mdt/Global_Configuration__mdt.object-meta.xml
<CustomObject>
    <label>Global Configuration</label>
    <pluralLabel>Global Configurations</pluralLabel>
</CustomObject>