force-app/zurich-base/main/default/objects/Global_Configuration__mdt/fields/Dev_Value__c.field-meta.xml
<CustomField>
    <fullName>Dev_Value__c</fullName>
    <label>Dev Value</label>
    <length>100</length>
    <type>Text</type>
</CustomField>