force-app/zurich-base/main/default/objects/Global_Configuration__mdt/fields/Is_Id__c.field-meta.xml
<CustomField>
    <fullName>Is_Id__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Id?</label>
    <type>Checkbox</type>
</CustomField>