force-app/zurich-base/main/default/objects/Global_Configuration__mdt/fields/Object__c.field-meta.xml
<CustomField>
    <fullName>Object__c</fullName>
    <label>Object</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Case</fullName>
            </value>
            <value>
                <fullName>Global Value</fullName>
                <default>true</default>
                <label>Global Value</label>
            </value>
            <value>
                <fullName>Queue</fullName>
            </value>
            <value>
                <fullName>Profile</fullName>
            </value>
            <value>
                <fullName>Opportunity</fullName>
            </value>
            <value>
                <fullName>Policy</fullName>
            </value>
            <value>
                <fullName>Entitlement</fullName>
            </value>
            <value>
                <fullName>Retention</fullName>
            </value>
            <value>
                <fullName>CampaignMember</fullName>
            </value>
            <value>
                <fullName>Campaign</fullName>
            </value>
            <value>
                <fullName>Account</fullName>
            </value>
            <value>
                <fullName>Activity</fullName>
            </value>
            <value>
                <fullName>Claim</fullName>
                <isActive>false</isActive>
                <label>Claim</label>
            </value>
            <value>
                <fullName>EmailMessage</fullName>
                <isActive>false</isActive>
                <label>EmailMessage</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>