force-app/zurich-base/main/default/objects/Global_Configuration__mdt/fields/Staging_Value__c.field-meta.xml
<CustomField>
    <fullName>Staging_Value__c</fullName>
    <label>Staging Value</label>
    <length>100</length>
    <type>Text</type>
</CustomField>