force-app/zurich-base/main/default/objects/Global_Configuration__mdt/fields/Uat_Value__c.field-meta.xml
<CustomField>
    <fullName>Uat_Value__c</fullName>
    <label>Uat Value</label>
    <length>100</length>
    <type>Text</type>
</CustomField>